# spellCraft

./: .gitignore
cmake/: CMakeLists.txt
docs/: dependencies.txt  documentation.txt
spellCraft/common/common_inc/: common_util.hpp  init_devices.hpp
spellCraft/common/common_src/: common_util.cpp  init_devices.cpp
src/: main.cpp
